public/css/style.css
/*
  +------------------------------------------------------------------------+
  | Phosphorum                                                             |
  +------------------------------------------------------------------------+
  | Copyright (c) 2013-2016 Phalcon Team and contributors                  |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.                        |
  |                                                                        |
  | If you did not receive a copy of the license and are unable to         |
  | obtain it through the world-wide-web, please send an email             |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
*/

.navbar-reverse .navbar-nav>li>a {
    font-size: 18px;
}

.navbar-reverse .navbar-nav>li>a.btn-default {
    font-size: 12px;
    padding: 5px;
    margin: 5px;
    margin-top: 10px;
}

h1 {
    font-size: 30px;
    margin-bottom: 15px;
}

.action-date {
    font-size: 11px;
    color: #717171;
}

.discussion div.row {
    padding-bottom: 20px;
    border-bottom: 1px solid #dadada;
    padding-top: 5px;
}

.discussion div.row:last-child {
    border-bottom: none;
}

p {
    margin: 10px 0 15px;
}

.posts-buttons {
    float: right;
}

.posts-buttons a:hover {
    text-decoration: underline;
}

.discussion .small {
    width: 90px;
    text-align: center;
}

.discussion .small a {
    color: #999999;
}

.discussion .small img {
    margin-top: 10px;
    width: 48px;
    height: 48px;
    border: none;
}

.discussion .post-editor {
    padding-left: 7px;
}

.CodeMirror {
    height: 150px;
    border: 1px solid #c0c0c0;
    margin-right: 15px;
}

pre.prettyprint {
    padding: 10px;
}

.discussion img {
    max-width: 550px;
    max-height: 600px;
}

.action-edit,
.action-reply-edit {
    color: #ea7c62;
    cursor: pointer;
}

.post-content {
    max-width: 900px;
    min-height: 70px;
    padding-left: 5px;
}

@media (min-width: 1280px) {
    .modal-dialog {
        width: 1024px;
    }
}

@media (min-width: 1024px) {
    .modal-dialog {
        width: 900px;
    }
}

#historyBody {
    max-height: 550px;
    overflow-y: scroll;
}

.list-discussions img {
    width: 24px;
    height: 24px;
}

.karma {
    color: #777;
    font-size: 10px;
}

.dropdown-menu {
    min-width: 240px;
}

.dropdown-menu .label-default {
    color: whitesmoke;
}

.user-profile {
    width: 820px;
}

.user-profile .login {
    color: #969696;
}

.user-profile .small {
    width: 100px;
    text-align: center;
}

.user-profile h1 {
    margin: 0px;
}

.user-profile table {
    width: 100%;
}

.discussion .small a.user-moderator-Y {
    background: #ffffc2;
    color: #0077b3;
    padding: 2px;
}

.user-profile .date {
    color: #999;
}

.bs-callout {
    margin: 20px 0;
    padding: 20px;
    border: 1px solid #eee;
    border-left: 3px solid #eee;
    background: #fefefe;
    margin-left: 10px;
}

.bs-callout-info {
    /*background-color: #f4f8fa;*/
    border-left-color: #5bc0de;
}

.bs-callout-success {
    /*background-color: #dff0d8;*/
    border-left-color: #47a447;
}

.bs-callout-warning {
    border-left-color: #f0ad4e;
}

.bs-callout-danger {
    border-left-color: #d9534f;
}

.bs-callout-danger h4 {
    color: #d9534f;
}

.bs-callout-info h4 {
    color: #5bc0de;
}

.bs-callout-success h4 {
    color: #47a447;
}

.bs-callout-warning h4 {
    color: #f0ad4e;
}

.bs-callout h4 {
    margin-top: 0;
    margin-bottom: 5px;
}

.bs-callout p:last-child {
    margin-bottom: 0;
}

.help {
    width: 800px;
}

.help table {
    max-width: 80%;
}

.post-negative a,
.post-negative td {
    color: #c0c0c0;
    font-size: 12px;
}

.post-negative img {
    width: 16px;
    height: 16px;
}

.post-negative-h1,
.post-negative-body {
    color: #c0c0c0;
}

div.reply-negative div,
div.reply-negative p {
    color: #c0c0c0;
    font-size: 0.9em;
}

div.reply-positive div,
div.reply-positive p {
    font-size: 1.1em;
}

div.reply-negative td.small img {
    width: 32px;
    height: 32px;
}

div.reply-negative .post-content {
    min-height: 50px;
}

div.reply-negative {
    background: #fafafa;
}

div.reply-positive {
    background: #f4f8fa;
}

div.reply-accepted {
    background: #f4f8fa;
}

div.reply-accepted .post-content {
    min-height: 105px;
}

div#footer .version {
    color: #c0c0c0;
    font-size: 12px;
}

div#footer a {
    color: #c0c0c0;
    font-size: 12px;
}

.posts-buttons .btn-default {
    color: #919191;
}

.table-title td {
    padding: 0px;
}

.table-title h1 {
    margin: 0px;
}

.table-stats {
    border: 1px solid #dadada;
}

.table-stats td {
    padding: 7px;
    text-align: center;
    font-size: 12px;
    padding-right: 11px;
    padding-left: 11px;
    color: #0077b3;
}

.table-stats label {
    color: #999999;
    margin: 0px;
    font-weight: normal;
}

div.accepted-reply {
    color: #47a447;
    font-size: 11px;
}

div.accepted-reply span {
    font-size: 26px;
    margin-top: 10px;
    margin-bottom: 10px;
}

#preview-box {
    min-height: 180px;
    margin: 20px;
}

blockquote {
    padding: 12px;
    margin-top: 14px;
    margin-left: 15px;
    font-size: 14px;
    border-left: 5px solid #cccccc;
    background: whitesmoke;
}

blockquote p {
    margin: 0px;
}

@media (max-width: 320px) {

    .discussion .small img {
        width: 32px;
        height: 32px;
        float: left;
    }

    .discussion .small {
        width: 40px;
    }

    .discussion .small a {
        font-size: 10px;
    }

    .table-stats {
        margin-top: 10px;
    }

    .table-stats td {
        font-size: 10px;
    }

    table.list-discussions {
        width: 300px;
    }

    table.list-discussions td {
        overflow-y: hidden;
    }
}

.modal-backdrop {
    background: rgba(255, 255, 255, 0.2);
}

.in-reply-to {
    padding: 5px 12px;
    border: 1px solid #e6e6e6;
    font-size: 12px;
    margin-bottom: 10px;
}

.in-reply-to img {
    margin: 3px;
}

table.list-discussions a:visited {
    color: #8c8c8c;
}

.notification-container {
    position: relative;
}

.notification-counter {
    position: absolute;
    top: 9px;
    right: 9px;
    background-color: rgba(212, 19, 13, 1);
    color: #fff;
    border-radius: 3px;
    padding: 1px 3px;
    font: 8px Verdana;
}

.activity-container table {
    margin-top: 10px;
}

.activity-container span.date {
    font-size: 12px;
    color: #717171;
}

.activity-container .small {
    width: 48px;
}

.activity-container .unread {
    font-weight: bold;
}

pre,
.breadcrumb {
    background: #fefefe;
}

.breadcrumb {
    margin-left: -15px;
}

div#recommended-posts-create {
    background: #fefefe;
    padding: 10px;
    border: 1px solid #ddd;
}

div#recommended-posts-create-content {
    margin-top: 10px;
}

div.recommended-post-create {
    margin-bottom: 10px;
}

div.recommended-post-create span {
    font-size: 12px;
    color: #c0c0c0;
}

ul.preview-nav {
    margin-top: 10px;
}

div.login-comment {
    margin-top: 20px;
}

div#suggested-posts h3 {
    margin: 0px;
    font-size: 16px;
}

div#sticky-progress {
    position: fixed;
    bottom: 0px;
    right: 0px;
    color: #08c;
    background: #e0f5ff;
    font-size: 16px;
    padding: 15px;
    border: 1px solid #fff;
}

.center-block {
    display: table;
    margin-left: auto;
    margin-right: auto;
    float:none;
}

.user-poll-section {
    height: 5px;
}

.poll-idx {
    width: 1em;
    display: inline-block;
}

.post-option-header {
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 4px 4px 0 0;
    box-shadow: none;
    margin-left: 0;
    margin-right: 0;
    padding: 15px;
    position: relative;
}

.post-option-body {
    border: 1px solid #ddd;
    border-radius: 0 0 4px 4px;
    margin: -1px 0 0;
    background-color: #f7f7f9;
    padding: 34px 14px 9px;
    color: #333;
}

.badge {
    padding: .4em .8em .4em .4em;
    margin: 0 3px 3px 0;
    text-decoration: none;
    background-color: #333;
    border: 1px solid #333;
    border-radius: 4px;
    font-weight: 400;
    -webkit-transition: background, .3s, ease;
       -moz-transition: background, .3s, ease;
        -ms-transition: background, .3s, ease;
         -o-transition: background, .3s, ease;
              transition: background .3s ease;
}

.badge:hover {
    background: #555;
    color: white;
    border-color: #555;
}

.badge1, .badge2, .badge3 {
    display: inline-block;
    overflow: hidden;
    line-height: inherit;
    vertical-align: text-bottom;
    height: 14px;
    margin-right: 3px;
    margin-left: 2px;
    width: 6px;
}


.badge3 {
    background-image: url("/icon/badges.gif?v=1");
    background-size: initial;
    background-position: -7px -3px;
}

